Fixed the navigation. Still a bug in the sidebar height. Collapsing works partly.

--- a/scss/kosmos-style.scss
+++ b/scss/kosmos-style.scss
@@ -1,14 +1,11 @@
 @import "fonts";
 @import "variables";
-@import "sidebar";
 
 @import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
 @import "../node_modules/bootstrap/scss/mixins";
 
-
 // Optional bootstrap imports
-
 @import "../node_modules/bootstrap/scss/root"; // Required
 @import "../node_modules/bootstrap/scss/reboot"; // Required
 @import "../node_modules/bootstrap/scss/type";
@@ -44,4 +41,42 @@
 @import "../node_modules/bootstrap/scss/utilities";
 // @import "../node_modules/bootstrap/scss/print";
 
+// Overwriting cosmos imports
+@import "sidebar";
+@import "topbar";
+@import "card";
+
 // Cosmos template
+
+body > .container {
+  width: 100%;
+  max-width: 100%;
+
+  height: 100%;
+  min-height: 100%;
+
+  padding: 0;
+}
+
+.main_column {
+  width: 100%;
+  max-width: 100%;
+  margin-left: $sidebar-size;
+  background-color: $gray-100;
+  //fix gutter between side column and main column
+  padding-left: 0;
+
+  .main_content {
+    padding: 1rem;
+
+    h1{
+      color: $blue;
+      font-family: "Droid Sans", sans-serif;
+      font-size: 1.75rem;
+    }
+  }
+}
+
+#main_container.sidebar_collapsed .main_column {
+  margin-left: $sidebar-size-collapsed;
+}
